# bbpm

./: .gitignore  CITATION.cff  GITHUB_SETUP.md  LICENSE  Makefile  README.md  SECURITY.md  USAGE_GUIDE.md  USAGE_NEW_CODE.md  environment.yml  plan.md  pyproject.toml  requirements.txt
.cursor/plans/: bbpm_theory-compatible_implementation_7886d371.plan.md
.github/workflows_backup/: lint.yml  tests.yml
artifacts_test1/metrics/: exp06.json  exp07.json
artifacts_test2/metrics/: exp06.json  exp07.json
benchmarks/: kernel_bench.py  microbench_write_read.py  occupancy_bench.py
docs/: experiments.md
examples/: minimal_demo.py  needle_sanity.py  quick_start.py
experiments/: INTERPRETATION.md  METRICS_SCHEMA.md  README.md  __init__.py  common.py  exp01_snr_scaling.py  exp02_k_h_ablation.py  exp03_runtime_vs_attention.py  exp04_needle.py  exp05_end2end_assoc.py  exp06_occupancy_skew.py  exp07_drift_reachability.py  run.py  run_all.py
experiments/exp01_capacity_scaling/: analyze.py  config.yaml  run.py
experiments/exp02_ablation_K_H/: analyze.py  config.yaml  run.py
experiments/exp03_block_vs_global/: analyze.py  config.yaml  run.py
experiments/exp04_kv_memory_scaling/: analyze.py  config.yaml  run.py
experiments/exp05_needle_haystack/: analyze.py  config.yaml  run.py
experiments/exp06_drift_stability/: analyze.py  config.yaml  run.py
experiments/exp07_llm_integration/: analyze.py  config.yaml  run_eval.py  run_speed.py
experiments/exp07_llm_integration/configs/: bbpm_aug.yaml  small_decoder.yaml
legacy/colab_exports/: bbpm_prototype.py  poc_for_bbpm_prototype.py
paper/appendix/: extra_experiments.tex  extra_theory.tex
paper/icml2026/: main.tex  references.bib
scripts/: bench_addressing.py  bench_addressing_cuda.py  download_models.sh  format_and_lint.sh  reproduce_icml.sh  run_all_experiments.sh  test_cuda_batch.py
src/bbpm/: __init__.py  config.py
src/bbpm/addressing/: __init__.py  bbpm_addressing.py  block_address.py  block_selector.py  hash_mix.py  prp.py  prp_feistel.py
src/bbpm/experiments/: __init__.py  common.py  exp01_snr_scaling.py  exp02_k_h_ablation.py  exp03_runtime_vs_attention.py  exp04_needle.py  exp05_end2end_assoc.py  exp06_occupancy_skew.py  exp07_drift_reachability.py  plotting.py  run.py
src/bbpm/hashing/: __init__.py  base.py  block_hash.py  diagnostics.py  global_hash.py  multihash.py
src/bbpm/integration/: __init__.py  fusion.py  interfaces.py  keying.py  kv_substitution.py
src/bbpm/memory/: __init__.py  base.py  bbpm_memory.py  binary_bloom.py  eviction.py  float_superposition.py  (+1 more)
tests/: __init__.py  conftest.py  test_addressing.py  test_addressing_determinism.py  test_batch_addressing.py  test_block_address_tensor_equivalence.py  test_collision_regimes.py  test_counts_unbiasedness.py  test_determinism.py  test_gpu_cpu_parity.py  test_hashing_determinism.py  test_intrablock_unique.py  test_memory_ops.py  test_memory_performance.py  test_memory_readwrite.py  test_multihash_overlap.py  test_prp.py  test_prp_bijection.py  test_prp_tensor_equivalence.py  test_write_read_identity.py
(+13 files in other folders)
